<resources>
    <string name="app_name">SmashLadder</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="action_register">Register</string>
    <string name="title_player_list">Players</string>
    <string name="title_player_detail">Player Detail</string>
    <string name="name_or_tag">Name or Tag</string>
    <string name="cancel">Cancel</string>
    <string name="add_match_fragment_interface_error">" must implement AddMatchFragmentInterface"</string>
    <string name="player_details">Player Details</string>
    <string name="previous_player_matches">Previous Matches</string>
    <string name="challenger">Challenger:</string>
    <string name="character">Character:</string>
    <string name="opponent">Opponent:</string>
    <string name="winner">Winner:</string>
    <string name="add_match">Add Match</string>
    <string name="go_to_matches">Go to Matches</string>
    <string name="add_match_bad_winner_error">Winner must be either Challenger or Opponent</string>
    <string name="add_match_error_no_selection">Must select a player for every field</string>
    <string name="stage">Stage:</string>
    <string name="challenge_text">Challenge</string>
    <string name="moreinfo_text">Details</string>
    <string name="matchhistory">Match History</string>
    <string name="name_placeholder">FayJ vs JCW</string>
    <string name="update_failed">Update failed</string>
    <string name="currently_updating">Currently updating</string>
    <string name="fayJ">FayJ</string>
    <string name="done_updating">Done Updating</string>
    <string name="must_be_fayj">Must be FayJ to update</string>

    <string-array name="characters">
        <item>Dr. Mario</item>
        <item>Mario</item>
        <item>Luigi</item>
        <item>Bowser</item>
        <item>Peach</item>
        <item>Yoshi</item>
        <item>DK</item>
        <item>Captain Falcon</item>
        <item>Ganondorf</item>
        <item>Falco</item>
        <item>Fox</item>
        <item>Ness</item>
        <item>Ice Climbers</item>
        <item>Kirby</item>
        <item>Samus</item>
        <item>Zelda/Sheik</item>
        <item>Link</item>
        <item>Young Link</item>
        <item>Pichu</item>
        <item>Pikachu</item>
        <item>Jigglypuff</item>
        <item>Mewtwo</item>
        <item>Mr. Game &amp; Watch</item>
        <item>Marth</item>
        <item>Roy</item>
    </string-array>
    <string-array name="stages">
        <item>Yoshi\'s Story</item>
        <item>Fountain of Dreams</item>
        <item>Battlefield</item>
        <item>Final Destination</item>
        <item>Dream Land (N64)</item>
        <item>Pokemon Stadium</item>
        <item>Poke Floats</item>
    </string-array>
</resources>
