<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/challenger"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tvChallengerDetails"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/character"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tvChallengerCharacterDetails"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/opponent"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tvOpponentDetails"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/character"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tvOpponentCharacterDetails"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/stage"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tvStageDetails"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/winner"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tvWinnerDetails"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp" />

</LinearLayout>